--- a/CS3110.md
+++ b/CS3110.md
@@ -1,3 +1,7 @@
+---
+layout: page
+title: CS 3110
+---
 # CS 3110: Data Structures and Functional Programming
 
 Course Site: https://canvas.cornell.edu/courses/25259/
