Update website for 2022

--- a/_coursework/cs3110.md
+++ b/_coursework/cs3110.md
@@ -4,7 +4,7 @@ Instructor: Michael Clarkson
 Last edited: February 20, 2021 6:08 PM
 Tags: Spring 2021
 Textbook: https://www.cs.cornell.edu/courses/cs3110/2021sp/textbook/
-layout: page
+layout: wide_page
 title: CS 3110
 ---
 
